--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -24,9 +24,13 @@
   }
 
   &__title {
-    margin-bottom: $spacer * 3;
+    margin-bottom: $spacer * 2;
     position: relative;
     text-align: center;
+
+    @include media-breakpoint-up(md) {
+      margin-bottom: $spacer * 3;
+    }
 
     &::after {
       color: $light;
@@ -54,8 +58,16 @@
 
   &__text {
     &--large {
-      font-size: $font-size-root * 1.875;
+      font-size: $font-size-root * 1.5;
+
+      @include media-breakpoint-up(md) {
+        font-size: $font-size-root * 1.875;
+      }
     }
+  }
+
+  &__image {
+    display: block;
   }
 
   &--hero {
@@ -98,10 +110,16 @@
     }
 
     #{$self}__image {
-      margin-top: -$spacer * 4;
+      margin-top: -$spacer * 3;
       position: relative;
-      width: calc(200% + #{$spacer * 4});
+      text-align: right;
       z-index: 1;
+      
+      @include media-breakpoint-up(md) {
+        margin-top: -$spacer * 4;
+        // width: calc(200% + #{$spacer * 4});
+        text-align: left;
+      }
     }
   }
 
