--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,18 +5,11 @@
   &__container {
     align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-  }
 
-  &__logo {
-
-  }
-
-  &__nav {
-
-  }
-
-  &__social {
-
+    @include media-breakpoint-up(sm) {
+      flex-direction: row;
+    }
   }
 }
